--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "gulp-ejs": "^3.3.0",
     "gulp-livereload": "^4.0.1",
     "gulp-minify-css": "^1.2.4",
     "http-errors": "~1.6.2",
